--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
 .container_header{
     max-width: 1920px;
@@ -153,13 +155,90 @@
        
     }
 
-    main{
+    .container_main{
         height: 20vh;
     }
 }
 
 
-main{
+.container_main{
+    max-width: 1920px;
+    width: 100%;
+    margin:auto;
+    height: 137vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     background-color: #FFA185;
-    height: 100vh;
+
 }
+
+
+.container_main div{
+    height: 30%;
+    width: 85%;
+}
+
+
+.container_main h2{
+    color:#f7f7f7;
+    font-size:4vw;
+    margin-top:3vh;
+}
+
+.container_main p{
+    font-size:2.1vw;
+    margin-top: 5vh;
+  
+}
+
+.container_main_box{
+    height: 65%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;    
+    
+}
+
+.container_main--image{
+    width: 34vw;
+    height: 38vh;
+}
+
+@media(max-width:600px){
+    .container_main{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 110vh;
+        
+    }
+
+    .container_main_box{
+        height: 70%;
+        display: flex;
+        flex-flow: column nowrap;
+        }
+
+    .container_main--image{
+        height: 32vh;
+        width: 36vw;
+        margin-top:2vh;
+        border:solid 1px;
+    }
+
+    .container_main h2{
+        font-size:5vw;
+        margin-top:3vh;
+    }
+    .container_main p{
+        font-size:3vw;
+        margin-top: 5vh;
+      
+    }
+}
+
+
